well thats a lot of documentation

--- a/python/docs/source/tutorial/equations_of_state/bulk_properties.ipynb
+++ b/python/docs/source/tutorial/equations_of_state/bulk_properties.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "bf18174c",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f38aea95",
    "metadata": {},
    "outputs": [
@@ -272,10 +272,99 @@
   },
   {
    "cell_type": "markdown",
+   "id": "66dafc71",
+   "metadata": {},
+   "source": [
+    "### Residual Helmholtz free energy $A^r(\\vec{n},V,T)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "06994b8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-519.8710586930237"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = [5.0, 5.0]  # number of moles [mol]\n",
+    "V = 1.0         # volume [L]\n",
+    "T = 300.0       # temperature [K]\n",
+    "\n",
+    "model.helmholtz_residual_vt(n, V, T) # Calculate residual Helmholtz energy [bar L]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c11d453c",
+   "metadata": {},
+   "source": [
+    "You can obtain the next derivatives:\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{\\partial A^{r}_{(\\vec{n}, V, T)}}{\\partial V}\\right)_{T, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial A^{r}_{(\\vec{n}, V, T)}}{\\partial T}\\right)_{V, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial A^{r}_{(\\vec{n}, V, T)}}{\\partial n_i}\\right)_{V, T, n_{j \\neq i}} \\quad\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{\\partial^2 A^{r}_{(\\vec{n}, V, T)}}{\\partial V \\partial T}\\right)_{ \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial^2 A^{r}_{(\\vec{n}, V, T)}}{\\partial V^2}\\right)_{T, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial^2 A^{r}_{(\\vec{n}, V, T)}}{\\partial T^2}\\right)_{V, \\vec{n}} \\quad\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{\\partial^2 A^{r}_{(\\vec{n}, V, T)}}{\\partial n_i \\partial n_j}\\right)_{V, T, n_{k \\neq i,j}} \\quad\n",
+    "\\left(\\frac{\\partial^2 A^{r}_{(\\vec{n}, V, T)}}{\\partial V \\partial n_i}\\right)_{T, n_{j \\neq i}} \\quad\n",
+    "\\left(\\frac{\\partial^2 A^{r}_{(\\vec{n}, V, T)}}{\\partial T \\partial n_i}\\right)_{V, n_{j \\neq i}} \\quad\n",
+    "$$\n",
+    "\n",
+    "Ask for derivatives as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7d79134e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residual Helmholtz free energy:  -519.8710586930237\n",
+      "Derivatives:  {'dt': 1.746237812013294, 'dv': 193.43381070442314, 'dn': array([-65.21921351, -77.44176037]), 'dtv': -2.069290120706016, 'dv2': 398.1289412715064, 'dt2': -0.0021897892913883494, 'dvn': array([-53.69821295, -25.9275753 ]), 'dtn': array([0.39595811, 0.36714748]), 'dn2': array([[6.8304639 , 3.90917869],\n",
+      "       [3.90917869, 1.27633637]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Asking for all the derivatives\n",
+    "Ar , derivatives = model.helmholtz_residual_vt(\n",
+    "    n, V, T, dv=True, dt=True, dn=True, dtv=True, dvn=True, dtn=True, dn2=True,\n",
+    "    dv2=True, dt2=True\n",
+    ")\n",
+    "\n",
+    "# Displaying results\n",
+    "print(\"Residual Helmholtz free energy: \", Ar)\n",
+    "print(\"Derivatives: \", derivatives)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "45d01fc4",
    "metadata": {},
    "source": [
-    "### Residual Gibbs Energy $G^r(\\vec{n}, V, T)$"
+    "### Residual Gibbs free energy $G^r(\\vec{n}, V, T)$"
    ]
   },
   {
@@ -321,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1376ab42",
    "metadata": {},
    "outputs": [
@@ -348,12 +437,12 @@
    "id": "003e87ae",
    "metadata": {},
    "source": [
-    "### Residual Enthalpy $H^r(\\vec{n}, V, T)$"
+    "### Residual enthalpy $H^r(\\vec{n}, V, T)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0e3b5062",
    "metadata": {},
    "outputs": [
@@ -363,7 +452,7 @@
        "-1237.176213001435"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +462,7 @@
     "V = 1.0         # volume [L]\n",
     "T = 300.0       # temperature [K]\n",
     "\n",
-    "model.enthalpy_residual_vt(n, V, T) # Calculate residual Enthalpy [bar L]"
+    "model.enthalpy_residual_vt(n, V, T) # Calculate residual enthalpy [bar L]"
    ]
   },
   {
@@ -394,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f15b0810",
    "metadata": {},
    "outputs": [
@@ -418,10 +507,83 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b643141",
+   "metadata": {},
+   "source": [
+    "### Residual internal energy $U^r(\\vec{n}, V, T)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "33656746",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1043.7424022970117"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = [5.0, 5.0]  # number of moles [mol]\n",
+    "V = 1.0         # volume [L]\n",
+    "T = 300.0       # temperature [K]\n",
+    "\n",
+    "model.internal_energy_residual_vt(n, V, T) # Calculate residual internal energy [bar L]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e736d9aa",
+   "metadata": {},
+   "source": [
+    "You can obtain the next derivatives:\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{\\partial U^{r}_{(\\vec{n}, V, T)}}{\\partial V}\\right)_{T, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial U^{r}_{(\\vec{n}, V, T)}}{\\partial T}\\right)_{V, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial U^{r}_{(\\vec{n}, V, T)}}{\\partial n_i}\\right)_{V, T, n_{j \\neq i}}\n",
+    "$$\n",
+    "\n",
+    "Ask for derivatives as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7a7832c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residual Internal Energy:  -1043.7424022970117\n",
+      "Derivatives:  {'dt': 0.6569367874165049, 'dv': 814.2208469162279, 'dn': array([-184.00664642, -187.58600342])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Asking for all the derivatives\n",
+    "Ur, derivatives = model.internal_energy_residual_vt(n, V, T, dt=True, dv=True, dn=True)\n",
+    "\n",
+    "# Displaying results\n",
+    "print(\"Residual Internal Energy: \", Ur)\n",
+    "print(\"Derivatives: \", derivatives)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c67a3d0d",
    "metadata": {},
    "source": [
-    "### Residual Entropy $S^r(n, V, T)$"
+    "### Residual entropy $S^r(\\vec{n}, V, T)$"
    ]
   },
   {
@@ -446,7 +608,7 @@
     "V = 1.0         # volume [L]\n",
     "T = 300.0       # temperature [K]\n",
     "\n",
-    "model.entropy_residual_vt(n, V, T) # Calculate residual Entropy [bar L / K]"
+    "model.entropy_residual_vt(n, V, T) # Calculate residual entropy [bar L / K]"
    ]
   },
   {
@@ -467,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "d41409c5",
    "metadata": {},
    "outputs": [
@@ -494,12 +656,12 @@
    "id": "280a119b",
    "metadata": {},
    "source": [
-    "### Residual heat Capacity at constant volume $C_V^r(n, V, T)$"
+    "### Residual heat capacity at constant volume $C_V^r(\\vec{n}, V, T)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "e7cc6b25",
    "metadata": {},
    "outputs": [
@@ -509,7 +671,7 @@
        "0.6569367874165049"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,12 +689,12 @@
    "id": "ebd4fa3b",
    "metadata": {},
    "source": [
-    "### Residual Heat Capacity at constant pressure $C_P^r(n, V, T)$"
+    "### Residual heat capacity at constant pressure $C_P^r(\\vec{n}, V, T)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "15d3ba36",
    "metadata": {},
    "outputs": [
@@ -542,7 +704,7 @@
        "3.72361653132665"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,26 +731,43 @@
     "as a Python dictionary with the keys `dp`, `dt`, and `dn`, etc. respectively.\n",
     "The compositional derivatives are always returned as `Numpy` arrays.\n",
     "\n",
-    "The following properties can be calculated:\n",
+    "When we are calculating properties with pressure as specified variable, we\n",
+    "have to ask for a specific volume root. The possible roots are:\n",
     "\n",
+    "- \"liquid\"\n",
+    "- \"vapor\"\n",
+    "- \"stable\" (default if not specified)\n",
+    "\n",
+    "The \"stable\" root refers to the stable phase of the system. If this options is\n",
+    "set, both liquid and vapor roots will be calculated and the phase with the\n",
+    "lower residual Gibbs free energy $(G^{r}_{(\\vec{n},P,T)})$ will be returned as\n",
+    "the stable phase.\n",
+    "\n",
+    "The following properties can be calculated:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18d3967e",
+   "metadata": {},
+   "source": [
     "### Volume"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "id": "d74a70ff",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "245.62683294458913"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Volume (liquid) in liters:  1.1546008756262833\n",
+      "Volume (vapor) in liters:  245.62683294458913\n",
+      "Volume (stable phase) in liters:  245.62683294458913\n"
+     ]
     }
    ],
    "source": [
@@ -596,7 +775,95 @@
     "P = 1.0         # pressure [bar]\n",
     "T = 300.0       # temperature [K]\n",
     "\n",
-    "model.volume(n, P, T, root=\"stable\")"
+    "volume_liquid = model.volume(n, P, T, root=\"liquid\")\n",
+    "volume_vapor = model.volume(n, P, T, root=\"vapor\")\n",
+    "volume_stable = model.volume(n, P, T, root=\"stable\")\n",
+    "\n",
+    "# Displaying results\n",
+    "print(\"Volume (liquid) in liters: \", volume_liquid)\n",
+    "print(\"Volume (vapor) in liters: \", volume_vapor)\n",
+    "print(\"Volume (stable phase) in liters: \", volume_stable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b802cff",
+   "metadata": {},
+   "source": [
+    "### Logarithm of fugacity coefficients $ln \\, \\phi(\\vec{n},P,T)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "a8922cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logarithm of fugacity coefficients (liquid):  [2.6074475  2.24385923]\n",
+      "Logarithm of fugacity coefficients (vapor):  [-0.01507129 -0.01531375]\n",
+      "Logarithm of fugacity coefficients (stable phase):  [-0.01507129 -0.01531375]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = [5.0, 5.0]  # number of moles [mol]\n",
+    "P = 1.0         # pressure [bar]\n",
+    "T = 300.0       # temperature [K]\n",
+    "\n",
+    "ln_phi_l = model.lnphi_pt(n, P, T, root=\"liquid\")\n",
+    "ln_phi_v = model.lnphi_pt(n, P, T, root=\"vapor\")\n",
+    "ln_phi_s = model.lnphi_pt(n, P, T, root=\"stable\")\n",
+    "\n",
+    "# Displaying results\n",
+    "print(\"Logarithm of fugacity coefficients (liquid): \", ln_phi_l)\n",
+    "print(\"Logarithm of fugacity coefficients (vapor): \", ln_phi_v)\n",
+    "print(\"Logarithm of fugacity coefficients (stable phase): \", ln_phi_s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2a4e93c",
+   "metadata": {},
+   "source": [
+    "You can obtain the next derivatives **(on the specified volume root)**:\n",
+    "\n",
+    "$$\n",
+    "\\left(\\frac{\\partial ln \\, \\hat{\\phi}_i}{\\partial T}\\right)_{P, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial ln \\, \\hat{\\phi}_i}{\\partial P}\\right)_{T, \\vec{n}} \\quad\n",
+    "\\left(\\frac{\\partial ln \\, \\hat{\\phi}_i}{\\partial n_j}\\right)_{P, T, n_{k \\neq j}}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Ask for derivatives as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "78841079",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logarithm of fugacity coefficients (stable phase):  [-0.01507129 -0.01531375]\n",
+      "Derivatives:  {'dt': array([0.00013302, 0.00013235]), 'dp': array([-0.01513287, -0.01539262]), 'dn': array([[-8.47067747e-08,  8.47067748e-08],\n",
+      "       [ 8.47067748e-08, -8.47067747e-08]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Asking for all the derivatives\n",
+    "ln_phi_s, derivatives = model.lnphi_pt(n, P, T, root=\"stable\", dt=True, dp=True, dn=True)\n",
+    "\n",
+    "# Displaying results\n",
+    "print(\"Logarithm of fugacity coefficients (stable phase): \", ln_phi_s)\n",
+    "print(\"Derivatives: \", derivatives)"
    ]
   }
  ],
