--- a/python/docs/source/tutorial/equations_of_state/cubic_eos/cubic_mixing_rules.ipynb
+++ b/python/docs/source/tutorial/equations_of_state/cubic_eos/cubic_mixing_rules.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cubic Equations of State\n",
+    "# Mixing Rules\n",
     "\n",
     "There is one more thing to show of the Python API that `yaeos` supports.\n",
     "At this point of the tutorial we have been using cubic equations of state\n",
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Huron-Vidal mixing rule\n",
+    "## Huron-Vidal mixing rule\n",
     "\n",
     "The Huron-Vidal mixing rule allows linking a Cubic Equation of State with an\n",
     "Excess Gibbs model, this can be helpful to predict behaviour of systems with\n",
@@ -674,13 +674,6 @@
     "plt.legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
