--- a/python/docs/source/tutorial/equations_of_state/cubic_eos/cubic_models.ipynb
+++ b/python/docs/source/tutorial/equations_of_state/cubic_eos/cubic_models.ipynb
@@ -10,42 +10,177 @@
   },
   {
    "cell_type": "markdown",
+   "id": "acfb71d5",
+   "metadata": {},
+   "source": [
+    "Our Cubic Equations of State are implemented based on the generic Cubic\n",
+    "Equation:\n",
+    "\n",
+    "$$\n",
+    "    P = \\frac{RT}{V-b} - \\frac{a_c\\alpha(T_r)}{(V + \\delta_1 b)(V - \\delta_2 b)}\n",
+    "$$\n",
+    "\n",
+    "Almost all cubic equations of state use the Quadratic mixing rule by default.\n",
+    "Because of that you can provide $k_{ij}$ and $l_{ij}$ parameters. Check the\n",
+    "\"Mixing Rules\" section of the Cubic Equations of State tutorial for more\n",
+    "information about different mixing rules and how to change them.\n",
+    "\n",
+    "Check out for all the sections of the \"Equations of State (EoS)\" tutorial to\n",
+    "learn all you can do with the Cubic Equations of State."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f06041b8",
    "metadata": {},
    "source": [
-    "## Peng-Robinson (1976)"
+    "## Peng-Robinson (1976)\n",
+    "\n",
+    "The Peng-Robinson (1976) EoS uses the following $\\alpha$ function and\n",
+    "correlation for $k$.\n",
+    "\n",
+    "$$ \\alpha(T_r) = \\left(1 + k (1 - \\sqrt{T_r})\\right)^2 $$\n",
+    "$$ k = 0.37464 + 1.54226 \\, \\omega - 0.26993 \\, \\omega^2 $$\n",
+    "$$ a_c = 0.45723553  \\frac{R^2 T_c^2}{P_c} $$\n",
+    "$$ b = 0.07779607 \\frac{R T_c}{P_c} $$\n",
+    "$$ \\delta_1 = 1 + \\sqrt{2} $$\n",
+    "$$ \\delta_2 = 1 - \\sqrt{2} $$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd24c0cb",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "b7a268ca",
    "metadata": {},
    "source": [
-    "## Peng-Robinson (1978)"
+    "## Peng-Robinson (1978)\n",
+    "\n",
+    "The Peng-Robinson (1978) EoS is an improved version of the original\n",
+    "Peng-Robinson (1976) equation for heavier components. This equation ensures a\n",
+    "monotonically increasing $k$ as the values of $\\omega$ increases. It uses\n",
+    "the following $\\alpha$ function and correlation for $k$.\n",
+    "\n",
+    "$$ \\alpha(T_r) = \\left(1 + k (1 - \\sqrt{T_r})\\right)^2 $$\n",
+    "\n",
+    "$$\n",
+    "k =\n",
+    "\\begin{cases} \n",
+    "0.37464 + 1.54226 \\, \\omega - 0.26992 \\, \\omega^2 & \\text{if} \\quad \\omega \\leq 0.491 \\\\\n",
+    "0.37464 + 1.48503 \\, \\omega - 0.16442 \\, \\omega^2 + 0.016666 \\, \\omega^3 & \\text{if} \\quad \\omega > 0.491\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "$$ a_c = 0.45723553  \\frac{R^2 T_c^2}{P_c} $$\n",
+    "$$ b = 0.07779607  \\frac{R T_c}{P_c} $$\n",
+    "$$ \\delta_1 = 1 + \\sqrt{2} $$\n",
+    "$$ \\delta_2 = 1 - \\sqrt{2} $$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3bc4ddd",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "83ea1d43",
    "metadata": {},
    "source": [
-    "## Soave-Redlich-Kwong"
+    "## Soave-Redlich-Kwong\n",
+    "\n",
+    "The Soave-Redlich-Kwong EoS uses the following $\\alpha$ function and its\n",
+    "respective correlation for $k$.\n",
+    "\n",
+    "$$ \\alpha(T_r) = (1 + k (1 - \\sqrt{T_r}))^2 $$\n",
+    "$$ k = 0.48 + 1.574 \\omega - 0.175 \\omega^2  $$\n",
+    "$$ a_c = 0.427480  \\frac{R^2 T_c^2}{P_c} $$\n",
+    "$$ b_c = 0.086640  \\frac{R T_c}{P_c} $$\n",
+    "$$ \\delta_1 = 1 $$\n",
+    "$$ \\delta_2 = 0 $$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69ee5ab6",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "76c32e5d",
    "metadata": {},
    "source": [
-    "## RKPR"
+    "## RKPR\n",
+    "\n",
+    "The RKPR EoS extends the classical formulation of Cubic Equations of State by\n",
+    "freeing the parameter $\\delta_1$ and setting $\\delta_2 =\n",
+    "\\frac{1+\\delta_1}{1-\\delta_1}$. This extra degree provides extra ways of\n",
+    "implementing the equation in comparison of other Cubic EoS (like Peng-Robinson\n",
+    "and Soave-Redlich-Kwong) which are limited to definition of their critical\n",
+    "constants.\n",
+    "\n",
+    "Besides that extra parameter, the RKPR includes another $\\alpha$\n",
+    "function:\n",
+    "\n",
+    "$$\n",
+    " \\alpha(T_r) = \\left(\\frac{3}{2+T_r}\\right)^k\n",
+    "$$\n",
+    "\n",
+    "These two extra parameters can be provided as arguments. But, if they are\n",
+    "not provided they will be calculated by the following correlations:\n",
+    "\n",
+    "$$ \\delta_1 = d_1 + d_2 (d_3 - Z_c)^d_4 + d_5 (d_3 - Z_c) ^ {d_6} $$\n",
+    "$$ k = (A_1  Z_c + A_0)\\omega^2 + (B_1 Z_c + B_0)\\omega + (C_1 Z_c + C{_0)} $$\n",
+    "\n",
+    "In this implementation, the $k$ constants (if not provided) will also \n",
+    "be readjusted to assure that $\\omega = -log_{10}\\left(P_r^{sat}\\right) - 1$ \n",
+    "at $T_r = 0.7$.\n",
+    "\n",
+    "It is also possible to include the parameters as optional arguments."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce9ce59d",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "63de3f4e",
    "metadata": {},
    "source": [
-    "## Predictive Soave-Redlich-Kwong"
+    "## Predictive Soave-Redlich-Kwong (PSRK)"
    ]
   }
  ],
