--- a/python/docs/source/tutorial/instantiate_model.ipynb
+++ b/python/docs/source/tutorial/instantiate_model.ipynb
@@ -20,17 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0;31mType:\u001b[0m        module\n",
-      "\u001b[0;31mString form:\u001b[0m <module 'yaeos.models' from '/home/salvador/code/yaeos/python/yaeos/models/__init__.py'>\n",
-      "\u001b[0;31mFile:\u001b[0m        ~/code/yaeos/python/yaeos/models/__init__.py\n",
-      "\u001b[0;31mDocstring:\u001b[0m  \n",
+      "\u001b[31mType:\u001b[39m        module\n",
+      "\u001b[31mString form:\u001b[39m <module 'yaeos.models' from '/home/ruther/docs/programming/python/virtualenvs/thermo/lib/python3.13/site-packages/yaeos/models/__init__.py'>\n",
+      "\u001b[31mFile:\u001b[39m        ~/docs/programming/python/virtualenvs/thermo/lib/python3.13/site-packages/yaeos/models/__init__.py\n",
+      "\u001b[31mDocstring:\u001b[39m  \n",
       "Models module.\n",
       "\n",
       "Yaeos models module. This module provides the following submodules:\n",
@@ -48,14 +48,18 @@
       "        - RKPR: RKPR model\n",
       "    - Mixing rules: mixing rules for cubic EoS\n",
       "        - QMR: cuadratic mixing rule\n",
-      "        - MHV: modified Huron-Vidal mixing rule"
+      "        - MHV: modified Huron-Vidal mixing rule\n",
+      "        - HV: Huron-Vidal mixing rule\n",
+      "        - HVNRTL: Huron-Vidal NRTL mixing rule\n",
+      "    - Multifluid EoS:\n",
+      "        - GERG2008: GERG2008 Residual contribution"
      ]
     }
    ],
    "source": [
     "import yaeos\n",
     "\n",
-    "?yaeos.models"
+    "yaeos.models?"
    ]
   },
   {
@@ -911,7 +915,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "yaeos",
+   "display_name": "thermo",
    "language": "python",
    "name": "python3"
   },
@@ -925,7 +929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
