--- a/python/docs/source/tutorial/equations_of_state/gpec/gpec_tutorial.ipynb
+++ b/python/docs/source/tutorial/equations_of_state/gpec/gpec_tutorial.ipynb
@@ -5,7 +5,7 @@
    "id": "4480c52b",
    "metadata": {},
    "source": [
-    "# Binary Sistems Diagrams\n",
+    "# Binary Systems Diagrams\n",
     "\n",
     "Phase diagrams of binary mixtures are extremely important to understand the \n",
     "phase behaviour of mixtures, make predictions and evaluate models.\n",
